<resources>
    <string name="app_name">nHentai Books</string>

    <string name="menu_home">Home</string>
    <string name="menu_love">Favorites</string>
    <string name="menu_download">Download</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Setting</string>

    <string name="favorite">Favorites</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
</resources>
