<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/back_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/left_w" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:background="@mipmap/logo" />

        <TextView
            android:id="@+id/next_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:background="@mipmap/next" />

        <TextView
            android:id="@+id/search_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/next_view"
            android:background="@mipmap/search_w" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="Homepage"
            android:textColor="#ffffff"/>

        <RelativeLayout
            android:id="@+id/search_panel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/search_panel_shape"
            android:visibility="gone">

            <TextView
                android:id="@+id/start_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:background="@mipmap/search_w" />

            <EditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/start_search"
                android:gravity="center_vertical"
                android:maxLines="1" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/id_drawerlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/id_framelayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/books_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_linearlayout2"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="#34352C"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/menu_home_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/menu_home"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/menu_home"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/menu_home"
                        android:src="@mipmap/home_w" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ffffff" />

                <RelativeLayout
                    android:id="@+id/menu_love_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/menu_love"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/menu_love"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/menu_love"
                        android:src="@mipmap/love_w_2" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ffffff" />

                <RelativeLayout
                    android:id="@+id/menu_download_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/menu_download"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/menu_download"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/menu_download"
                        android:src="@mipmap/download_w" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ffffff" />

                <RelativeLayout
                    android:id="@+id/menu_history_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/menu_history"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/menu_history"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/menu_history"
                        android:src="@mipmap/history_w" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ffffff" />

                <RelativeLayout
                    android:id="@+id/menu_setting_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/menu_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/menu_setting"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@id/menu_setting"
                        android:src="@mipmap/setting_w" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#ffffff" />
            </LinearLayout>

        </android.support.v4.widget.DrawerLayout>

    </RelativeLayout>
</LinearLayout>